// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"
import styles from './styles.css';

styles.foo + ' ' + styles.bar;

<div className={styles.foo + ' ' + styles.bar} />;"
`;

exports[`classnames-examples 1`] = `
"

'foo bar';
'foo bar';
'foo-bar';
'';
'foo bar';
'foo bar';
'foo bar baz quux';
'bar ' + 1;"
`;

exports[`custom-import-name 1`] = `
"
import styles from '../styles.css';

styles.foo + ' ' + styles.bar;

<div className={styles.foo + ' ' + styles.bar} />;"
`;

exports[`falsy-values 1`] = `
"

'';
'foo ' + 1;"
`;

exports[`object-expression 1`] = `
"
import styles from './styles.css';

'foo bar';
'foo-bar';
'foo bar';
'foo bar';
'foo ham';
styles.foo + ' ' + styles.bar;"
`;

exports[`other-classnames 1`] = `
"import styles from './styles.css';

function classnames() {}

classnames(styles.foo, styles.bar);

<div className={classnames(styles.foo, styles.bar)} />;"
`;

exports[`scoped 1`] = `
"

function scope1() {
	function scope2() {
		return 'foo bar';
	}
}"
`;

exports[`string-literal 1`] = `
"
import styles from './styles.css';

'global ' + (styles.foo + ' ' + styles.bar);
'foo bar ham';"
`;
